# opal-fetcher-postgres

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
opal_fetcher_postgres/: provider.py
sql/: fill_tables.sql
src/opal_fetcher_postgres/: provider.py
